syntax = "proto3";

package v2ray.core.proxy.trusttunnel;
option csharp_namespace = "V2Ray.Core.Proxy.TrustTunnel";
option go_package = "github.com/v2fly/v2ray-core/v5/proxy/trusttunnel";
option java_package = "com.v2ray.core.proxy.trusttunnel";
option java_multiple_files = true;

import "common/net/address.proto";
import "common/protoext/extensions.proto";

message ClientConfig {
  option (v2ray.core.common.protoext.message_opt).type = "outbound";
  option (v2ray.core.common.protoext.message_opt).short_name = "trusttunnel";

  v2ray.core.common.net.IPOrDomain address = 1;
  uint32 port = 2;
  uint32 level = 3;
  string username = 4;
  string password = 5;
  bool http3 = 6;
  DomainStrategy domain_strategy = 7;
  string server_name_to_verify = 8;

  enum DomainStrategy {
    USE_IP = 0;
    USE_IP4 = 1;
    USE_IP6 = 2;
    PREFER_IP4 = 3;
    PREFER_IP6 = 4;
  }
}
